# AnalyticsService

./: .gitignore  README.md  pyproject.toml  requirements.txt
analytics/: settings.py  urls.py
analytics_app/: admin.py  models.py  serializers.py  urls.py  views.py
analytics_app/migrations/: 0001_initial.py  0002_analyticsproduct_product_productview_shop_shopview_and_more.py  0003_remove_analyticsproduct_product_and_more.py  0004_remove_product_category.py  0005_rename_created_at_analyticsproduct_viewed_at_and_more.py  0006_rename_viewed_at_analyticsproduct_created_at_and_more.py  0007_remove_product_category_remove_product_price_and_more.py
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
