[project]
name = "analyticsservice"
version = "0.1.0"
description = "\"Analytics microservice for football stats\""
authors = [
    {name = "Ilham Seferov",email = "sənin_emailin@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
